SocketUserList overflow fix

--- a/client/src/components/Notifications/ConfirmAlert/styles/style.css
+++ b/client/src/components/Notifications/ConfirmAlert/styles/style.css
@@ -24,7 +24,7 @@
   max-width: 50%;
   min-height: 30vh;
 
-  padding: 20px 20px 20px 20px;
+  padding: 16px 16px 16px 16px;
 
   border-radius: 4px;
 
@@ -73,4 +73,7 @@
 .cancel-button:hover,
 .confirm-button:hover {
   opacity: 1;
+}
+.extra-confirm-message {
+  font-weight: bold;
 }
